[workspace]
members = [
    ".",
    "enigma-core",
    "enigma-macros",
]

[package]
name = "enigma-cipher"
version = "0.1.0"
authors = ["Jeff Nettleton <jeffdn@gmail.com>"]
edition = "2018"

description = "An implementation of the legendary German Enigma cipher"
repository = "https://gitlab.com/jeffdn/enigma-cipher"
readme = "README.md"
license = "MIT"

[dependencies]
enigma-core = { path = "./enigma-core" }
termion = "1"
