[package]
name = "enigma-cipher-macros"
version = "0.1.0"
authors = ["Jeff Nettleton <jeffdn@gmail.com>"]
edition = "2018"

description = "Macros backing the parent Enigma implementation"
repository = "https://gitlab.com/jeffdn/enigma-cipher"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
