[package]
name = "enigma-core"
version = "0.1.0"
authors = ["Jeff Nettleton <jeffdn@gmail.com>"]
edition = "2021"

description = "An implementation of the legendary German Enigma cipher"
repository = "https://gitlab.com/jeffdn/enigma-cipher"
readme = "README.md"
license = "MIT"

[dependencies]
enigma-macros = { path = "../enigma-macros" }
